# newtonls-faer

./: Cargo.toml  README.md  _typos.toml  justfile
.github/workflows/: CI.yml
src/: engine.rs  lib.rs  linalg.rs  solver.rs
